<resources>
    <string name="app_name">Semaphore Manager</string>
    <string name="title_section_cpu">CPU</string>
    <string name="title_section_tweaks">Tweaks</string>
    <string name="title_section_modules">Modules</string>
    <string name="title_section_sai">SAI</string>
    <string name="title_section_info">Info</string>
    <string name="title_section_kmsg">kmsg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="app_path">/data/data/com.semaphore.sm/scripts/"</string>
    <string name="str_cat_oc_title">Overclocking</string>
    <string name="str_oc_title">LiveOC</string>
    <string name="str_oc_summary">Change LiveOC value</string>
    <string name="str_gov_title">Active governor</string>
    <string name="str_gov_summary">Change CPU governor</string>
    <string name="str_cat_gov_title">Governors</string>
    <string name="str_scaling_min_freq_title">Min frequency (MHz)</string>
    <string name="str_scaling_max_freq_title">Max frequency (MHz)</string>
    <string name="str_custom_volt_title">Voltages</string>
    <string name="str_cv_enable_title">Enabled</string>
    <string name="str_cv_enable_summary">Please use it at your own risk</string>
    <string name="str_cv_apply_title">Apply</string>
    <string name="str_cv_apply_summary">Apply custom voltages</string>
    <string name="str_cv_reset_title">Reset</string>
    <string name="str_cv_reset_summary">Reset custom voltages to default</string>
    <string name="str_cv_apply_boot_title">Apply on Boot</string>
    <string name="str_cv_apply_boot_summary">Select to re-apply after boot</string>
    <string name="str_max_arm_title">Maximum Voltage</string>
    <string name="str_cv_l0_title">L0</string>
    <string name="str_cv_l1_title">L1</string>
    <string name="str_cv_l2_title">L2</string>
    <string name="str_cv_l3_title">L3</string>
    <string name="str_cv_l4_title">L4</string>
    <string name="str_cpu_table_dialog_title">CPU Table Information</string>
    <string name="str_undervolt_title">Undervolting</string>
    <string name="str_undervolt_screen_title">Undervolting parameters</string>
    <string name="str_uv_enabled_title">Enabled</string>
    <string name="str_uv_enabled_summary">Please use it at your own risk</string>
    <string name="str_uv_apply_title">Apply</string>
    <string name="str_uv_apply_summary">Apply undervolting</string>
    <string name="str_uv_reset_title">Reset</string>
    <string name="str_uv_reset_summary">Reset undervolting values to default</string>
    <string name="str_uv_apply_boot_title">Apply on Boot</string>
    <string name="str_uv_apply_boot_summary">Select to re-apply after boot</string>
    <string name="str_uv_cpu_table_title">Show CPU table</string>
    <string name="str_uv_cpu_table_summary">Select to show CPU table info</string>
    <string name="str_uv_boost_title">Boost voltages</string>
    <string name="str_uv_boost_summary">Boost voltages by 25000uV</string>
    <string name="str_uv_lower_uv_title">Lower uV</string>
    <string name="str_uv_lower_uv_summary">Undervolting for lower freqs</string>
    <string name="str_uv_higher_uv_title">Higher uV</string>
    <string name="str_uv_higher_uv_summary">Undervolting for higher freqs</string>
    <string name="str_uv_higher_khz_thres_title">Higher freq threshold</string>
    <string name="str_uv_higher_khz_thres_summary">Threshold for higher freqs</string>
    <string name="str_hp_min_online_title">Minimum online cores</string>
    <string name="str_hp_max_online_title">Maximum online cores</string>
    <string name="str_hp_enabled_title">Enabled</string>
    <string name="str_hp_up_threshold_title">Up threshold</string>
    <string name="str_hp_up_threshold_summary">Valid values 1-100</string>
    <string-array name="array_gov_entries">
        <item>Ondemand</item>
        <item>Conservative</item>
        <item>SmartassV2</item>
        <item>Interactive</item>
    </string-array>
    <string-array name="array_gov_values">
        <item>ondemand</item>
        <item>conservative</item>
        <item>smartassV2</item>
        <item>interactive</item>
    </string-array>
    <string-array name="array_gov_entries_n4">
        <item>Ondemand</item>
        <item>Conservative</item>
        <item>Interactive</item>
    </string-array>
    <string-array name="array_gov_values_n4">
        <item>ondemand</item>
        <item>conservative</item>
        <item>interactive</item>
    </string-array>
    <string name="str_cat_leds_title">LED triggers</string>
    <string name="str_led_red_title">Red</string>
    <string name="str_led_green_title">Green</string>
    <string name="str_led_blue_title">Blue</string>
    <string-array name="array_led_entries">
        <item>None</item>
        <item>Touchwake</item>
        <item>MMC</item>
        <item>Thermal</item>
        <item>USB online</item>
        <item>DC online</item>
        <item>Wireless online</item>
        <item>Battery charging or full</item>
        <item>Battery charging</item>
        <item>Battery full</item>
    </string-array>
    <string-array name="array_led_values">
        <item>none</item>
        <item>touchwake</item>
        <item>mmc0</item>
        <item>thermal</item>
        <item>usb-online</item>
        <item>pm8921-dc-online</item>
        <item>wireless-online</item>
        <item>battery-charging-or-full</item>
        <item>battery-charging</item>
        <item>battery-full</item>
    </string-array>
    <string-array name="scripts">
        <item>noop</item>
        <item>deadline</item>
        <item>cfq</item>
        <item>sio</item>
        <item>row</item>
        <item>read_ahead</item>
        <item>touchscreen_0</item>
        <item>touchscreen_1</item>
        <item>touchscreen_2</item>
    </string-array>
    <string name="str_read_ahead_title">SD Card read ahead</string>
    <string-array name="array_read_ahead_entries">
        <item>128KB</item>
        <item>256KB</item>
        <item>512KB</item>
        <item>1024KB</item>
        <item>2048KB</item>
    </string-array>
    <string-array name="array_read_ahead_values">
        <item>128KB</item>
        <item>256KB</item>
        <item>512KB</item>
        <item>1024KB</item>
        <item>2048KB</item>
    </string-array>
    <string name="str_read_ahead_n4_title">SD read ahead</string>
    <string-array name="array_read_ahead_n4_entries">
        <item>128KB</item>
        <item>256KB</item>
        <item>512KB</item>
        <item>1024KB</item>
        <item>2048KB</item>
    </string-array>
    <string name="str_o_io_is_busy_title">IO is busy</string>
    <string name="str_o_sampling_down_factor_title">Sampling down factor</string>
    <string name="str_o_sampling_down_factor_summary">Valid values 1–100000</string>
    <string name="str_o_sampling_rate_title">Sampling rate</string>
    <string name="str_o_sampling_rate_summary">Valid values 10000-100000</string>
    <string name="str_o_up_threshold_title">Up threshold</string>
    <string name="str_o_up_threshold_summary">Valid values 11-100</string>
    <string name="str_o_powersave_bias_title">Powersave bias</string>
    <string name="str_o_powersave_bias_summary">Valid values 0-1000</string>
    <string name="str_o_touch_load_title">Touch load</string>
    <string name="str_o_touch_load_summary">Valid values 1-100</string>
    <string name="str_o_touch_load_threshold_title">Touch load threshold</string>
    <string name="str_o_touch_load_threshold_summary">Valid values 1-100</string>
    <string name="str_o_touch_load_duration_title">Touch load duration</string>
    <string name="str_o_touch_load_duration_summary">Valid values 1-1000000</string>
    <string name="str_c_freq_step_title">Frequency step</string>
    <string name="str_c_freq_step_summary">Valid values 1-100</string>
    <string name="str_c_sampling_down_factor_title">Sampling down factor</string>
    <string name="str_c_sampling_down_factor_summary">Valid values 1-100000</string>
    <string name="str_c_sampling_rate_title">Sampling rate</string>
    <string name="str_c_sampling_rate_summary">Valid values 10000-100000</string>
    <string name="str_c_up_threshold_title">Up threshold</string>
    <string name="str_c_up_threshold_summary">Valid values 1-100</string>
    <string name="str_c_down_threshold_title">Down threshold</string>
    <string name="str_c_down_threshold_summary">Valid values 1-100</string>
    <string name="str_i_hispeed_freq_title">Hi speed frequency</string>
    <string name="str_i_hispeed_freq_summary">Valid values 1-100</string>
    <string name="str_i_go_hispeed_load_title">Go hi speed load</string>
    <string name="str_i_go_hispeed_load_summary">Valid values 1-100000</string>
    <string name="str_i_min_sampling_time_title">Min sampling time</string>
    <string name="str_i_min_sampling_time_summary">Valid values 10000-100000</string>
    <string name="str_i_above_hispeed_delay_title">Above hi speed delay</string>
    <string name="str_i_above_hispeed_delay_summary">Valid values 1-100</string>
    <string name="str_i_timer_rate_title">Timer rate</string>
    <string name="str_i_timer_rate_summary">Valid values 10000-100000</string>
    <string name="str_i_timer_slack_title">Timer slack</string>
    <string name="str_i_timer_slack_summary">Valid values 10000-200000</string>
    <string name="str_i_boostpulse_duration_title">Boostpulse duration</string>
    <string name="str_i_boostpulse_duration_summary">Valid values 10000-200000</string>
    <string name="str_i_target_loads_title">Target loads</string>
    <string name="str_i_target_loads_summary">Valid values 1-100</string>
    <string name="str_i_io_is_busy_title">IO is busy</string>
    <string name="str_i_input_boost_title">Input boost</string>
    <string name="str_touchwake_disable_title">Touchwake disable</string>
    <string name="str_touchwake_disable_summary">Disable touchwake during calls</string>
    <string name="str_about_title">About</string>
    <string name="str_sai_enable_title">Enabled</string>
    <string name="str_vibrator_call_title">Vibrator on Phone ringing</string>
    <string name="str_vibrator_near_title">Proximity Near</string>
    <string name="str_vibrator_far_title">Proximity Far</string>
    <string name="str_pickup_phone_cat_title">Pickup Phone</string>
    <string name="str_pickup_phone_title">Enabled</string>
    <string name="str_pickup_phone_summary">Pickup phone without touch the screen</string>
    <string name="str_blink_leds_cat_title">Blink LEDs on Phone ringing</string>
    <string name="str_blink_leds_title">Enabled</string>
    <string name="str_blink_interval_title">Blinking interval</string>
    <string name="strMsgMinCores">Minimum number of online cores (1-4)</string>
    <string name="strMsgMaxCores">Maximum number of online cores (1-4)</string>
    <string name="strMsgVoltage">Voltage (in uV)</string>
    <string name="strInfoMemory">Memory</string>
    <string name="strInfoKernel">Kernel</string>
    <string name="strInfoAuthor">Author</string>
    <string name="strInfoDonate">Donate</string>
    <string name="strInfoDonateSummary">Please donate to help development</string>
    <string name="strMsgVibrator">Vibrator duty cycle</string>
    <string name="strMsgBlinking">Blinking interval</string>
    <string name="strActionRead">Read System Settings</string>
    <string name="strActionReset">Reset to default</string>
    <string name="strActionClear">Clear init.d</string>
    <string name="strActionToggle">Toggle theme</string>
    <string name="str_misc_title">miscellaneous</string>
</resources>