<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:semaphore="http://semaphore.gr">
    <com.semaphore.sm.SwitchCompatPreference
        android:key="sai_enable"
        android:title="@string/str_sai_enable_title" />
    <PreferenceCategory
        android:title="@string/str_vibrator_call_title"
        android:dependency="sai_enable">
        <com.semaphore.sm.SeekBarPreference
            android:key="vibrator_near"
            android:title="@string/str_vibrator_near_title"
            android:dependency="sai_enable"
            android:dialogMessage="@string/strMsgVibrator"
            android:defaultValue="100"
            android:text=" %"
            semaphore:min="0"
            android:max="100" />
        <com.semaphore.sm.SeekBarPreference
            android:key="vibrator_far"
            android:title="@string/str_vibrator_far_title"
            android:dependency="sai_enable"
            android:dialogMessage="@string/strMsgVibrator"
            android:defaultValue="35"
            android:text=" %"
            semaphore:min="0"
            android:max="100" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/str_pickup_phone_cat_title"
        android:dependency="sai_enable">
        <CheckBoxPreference
            android:key="pickup_phone"
            android:title="@string/str_pickup_phone_title"
            android:summary="@string/str_pickup_phone_summary"
            android:dependency="sai_enable" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/str_misc_title">
        <CheckBoxPreference
            android:key="touchwake_disable"
            android:title="@string/str_touchwake_disable_title"
            android:summary="@string/str_touchwake_disable_summary"
            android:dependency="sai_enable" />
    </PreferenceCategory>

</PreferenceScreen>