<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/str_about_title">
        <Preference
            android:key="Semaphore"
            android:title="@string/app_name"
            android:summary="" />
        <Preference
            android:key="kernel_version"
            android:title="@string/strInfoKernel"
            android:summary="version" />
        <Preference
            android:key="system_memory"
            android:title="@string/strInfoMemory"
            android:summary="MB" />
    </PreferenceCategory>
    <Preference
        android:title="@string/strInfoAuthor"
        android:summary="Stratos Karafotis (stratosk)">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://plus.google.com/100220263241141148640" />
    </Preference>
    <Preference
        android:title="@string/strInfoDonate"
        android:summary="@string/strInfoDonateSummary">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=stratosk%40semaphore%2egr&amp;lc=GB&amp;item_name=Semaphore%20Manager&amp;no_note=0&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG_global%2egif%3aNonHostedGuest" />
    </Preference>
    <PreferenceScreen android:title="www.semaphore.gr">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://www.semaphore.gr" />

    </PreferenceScreen>

</PreferenceScreen>