<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuitem1"
        app:showAsAction="never"
        android:title="@string/strActionRead"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/menuitem2"
        app:showAsAction="never"
        android:title="@string/strActionReset"
        android:orderInCategory="200"/>
    <item
        android:id="@+id/menuitem3"
        app:showAsAction="never"
        android:title="@string/strActionClear"
        android:orderInCategory="300"/>
    <item
        android:id="@+id/menuitem5"
        app:showAsAction="never"
        android:title="@string/strActionToggle"
        android:orderInCategory="400"/>
    <item
        android:id="@+id/menuitem4"
        app:showAsAction="never"
        android:title="@string/strActionDonate"
        android:orderInCategory="500"/>

</menu> 